fixed styling bug for create form on mobile devices

--- a/react-vite/src/components/CreateRecipe/CreateRecipe.css
+++ b/react-vite/src/components/CreateRecipe/CreateRecipe.css
@@ -428,4 +428,13 @@
         text-align: center;
         align-self: center;
     }
+
+    .step_and_add {
+        gap: 10px;
+    }
+
+    .preview_image {
+        max-width: 100%;
+
+    }
 }
